# utimer

./: .bzrignore  AUTHORS  Doxyfile  Makefile.am  Makefile.decl  README  README.in  autogen.sh  configure.ac
data/: Makefile.am  utimer.1
po/: LINGUAS  POTFILES.in  en_GB.po  fr.po  he.po  pt_BR.po  update_po_files_from_pot.sh
src/: Makefile.am  countdown.c  countdown.h  log.c  log.h  progress.c  progress.h  timer.c  timer.h  ut_config.h  utils.c  utils.h  utimer  utimer.c  utimer.h
src/tests/: Makefile.am  maintests.c
